# back-tester

./: .gitignore  CMakeLists.txt  EventBus.py  README.md  build.sh  dash_plot.py  data_handler.py  engine.py  engine_components.py  event_bus.py  execution.py  log_utility.py  main.py  model.py  quart_handle.py  quart_try.py  requirements.txt  strategy.py  try.ipynb  updatechart.py  util.py  utility.py  view.py
archive/: quart_handle.py  quart_livechart.py  script.js  updatechart.py  utility.py
clearing_house/: FakeClearingHouse.py  SimpleClearingHouse.py  __init__.py  clearing_house.py
data/: OHLCData.py  OHLCdata.py  Serializable.py  TickerData.py  __init__.py  core.py  ohlc_data.py  ticker_data.py  tickerdata.py
data_feed/: OHLCBarFeed.py  core.py
data_handler/: data_handler.py  tester.py
datafeed/: __init__.py  core.py
deprecated/: EventBus.py  main.py  model.py  requirements.txt
deprecated/archive/: update_chart.py
deprecated/data/: OHLCData.py
deprecated/data_feed/: DataFeed.py  __init__.py
deprecated/engine/: EventHandler.py  __init__.py
deprecated/execution/: Execution.py
deprecated/ideas/: record.md
deprecated/strategy/: DummyStrategy.py
deprecated/tests/: test_datafeed.py
deprecated/view/: ChartService.py  QuartLiveChartService.py  UpdateChart.py  __init__.py  script.js
engine/: BackTestEngine.py  Engine.py  EngineService.py  EventHandler.py  MetaEventHandler.py  __init__.py  core.py  engine.py
execution/: DummyExecution.py  __init__.py  core.py  dummy.py
include/: Logger.h  TimeUtility.cpp  TimeUtility.h
log/: TaskAdapter.py  __init__.py  core.py
portfolio/: PortfolioAnalyzer.py  RealTimePortfolio.py  __init__.py  core.py
protos/: ohlc.proto  zmq_message.proto
src/: DataFeedWorker.cpp  DataFeedWorker.h  Exceptions.h  Logger.h  OHLC.cpp  OHLC.h  main.cpp
strategy/: DummyStrategy.py  Strategy.py  __init__.py  core.py  dummy.py
tests/: test_datafeed.py
view/: View.py  __init__.py  core.py  livechart_quart.py  quart_handle.py  quart_livechart.py  quart_websocket_service.py  script.js  update_chart.py  view_livechart.py
views/: char.html  core.py  quart_livechart.py  script.js  view_livechart.py
